2012-06-08  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java (convert_template): The 2012-04-18
	fix was incorrect.

2012-05-20  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Fix typo "target" -> "-target".

2012-05-10  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Fix error message if --no-xxx passed,
	and xxx is not a known option.

2012-05-03  Per Bothner  <per@bothner.com>

	* standard/define_class.java (scanForDefinitions, rewriteForm): Make
	more robust.  This fixes Savannah bug #36335 "NPE on syntax error".

2012-04-18  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java (convert_template): Convert SyntaxForm
	symbol to itself. This fixes Savanannah bug #35526 "Nested macro".

2012-04-14  Per Bothner  <per@bothner.com>

	Add "marks" to TemplateScope, match syntax-case spec.
	Each mark corresponds to an application of a macro.
	Fixes Savannah bug #35552: "bound-identifier=?".
	* lang/TemplateScope.java (macroMark): New field.
	(make): Set macroMark field.
	* lang/Translator.java (currentMacroMark): New field.
	* lang/Macro.java (expand): Create new mark and save it in
	currentMacroMark field.
	* lang/SyntaxForms.java (identifierEquals): In the bound-identifier=?
	case compare marks from TemplateScope.

2012-03-25  Per Bothner  <per@bothner.com>

	* standard/let.java (rewrite): Check for duplicate definitions.

	* standard/define_syntax.java (scanForm): If we're not in a top-level
	context, quote the macro instead of compiling it.

2012-03-21  Per Bothner  <per@bothner.com>

	* Shell.java (runFile): Pass error port to run iflineByLine.
	This causes warnings and errors to be printed out.

2012-03-15  Per Bothner  <per@bothner.com>

	* standard/SchemeCompilation.java (isSimpleApplyFunction): New method.

2012-02-13  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define syntax->datum and
	datum->syntax.

2012-02-05  Per Bothner  <per@bothner.com>
