@@ -586,7 +586,7 @@ SCRIPTS_TO_RUN = uninit1.scm errors1.scm sva34005.scm sva35362.scm \
   sva36039.scm sva36413.scm sva36556.scm sva36853.scm inner-1.scm \
   anonymous-lambda-1.scm unreach1.scm unreach2.scm bad-defclass.scm \
   srfi-45-test1.scm srfi-45-test2.scm reflect1.scm promise1.scm \
-  define1.scm
+  define1.scm mac-obj.scm
 EXTRA_DIST = testing.scm test.scm num-test.scm mac-test.scm mac1.scm \
   classes1.scm classes2.scm SimpleB.java obj-test.scm arr-test.scm \
   lib-test.scm srfi-38-test.scm srfi-64-test.scm srfi-69-test.scm \
